--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
-	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
+	<link href="/favicon.png" rel="shortcut icon" type="image/png" /> 
 
     <title>InScane - Official Website</title>
 <!--
@@ -55,7 +55,7 @@ https://templatemo.com/tm-535-softy-pinko
                             <li><a href="#features">About</a></li>
                             <li><a href="#membership">Memberships</a></li>
                             <li><a href="#press">Press</a></li>
-                            <li><a href="#contact-us">Contact Us</a></li>
+                            <li><a href="#socialmedia">Social Media</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -76,7 +76,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>Hello, <strong>my</strong><br>name <strong>is Michael</strong></h1>
+                        <h1>Hello, <strong>my</strong><br>name <strong>is InScane!</strong></h1>
                         <p>InScane is an Social Media Influencer, Actor, and Television Show Host. He love's entertaining the world and teaching the public new things and to prove that the harder you work, anything is possible.</p>
                         <a href="#features" class="main-button-slider">Learn More!</a>
                     </div>
@@ -145,10 +145,10 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Let’s discuss about you project</h2>
+                        <h2 class="section-title">About Me</h2>
                     </div>
                     <div class="left-text">
-                        <p>Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue blandit, at finibus leo efficitur. Nam gravida purus non sapien auctor, ut aliquam magna ullamcorper.</p>
+                        <p>My name is Michael West, better known as my online Social Media pseudonym InScane. I am an American actor, Talk Show Host, and YouTuber. I am mostly popular for my Roblox and Minecraft Let's Plays and gaming videos as well as live streams. I first started uploading videos back on March 29, 2018 on my YouTube channel. I wanted to make a difference within the Social Media Community as in raise money for the people that need it like family and children hospitals and helping other creators grow their channels and gain the attention they need. Throughout my career and all the content being produced, I had many burnouts where I just didn't upload for weeks or took many weeks to relief stress but overcame the burnouts by just doing what I love, and getting rest before and after the content creation to freshen up.</p>
                     </div>
                 </div>
             </div>
@@ -206,25 +206,22 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
                     <div class="pricing-item">
                         <div class="pricing-header">
-                            <h3 class="pricing-title">Starter</h3>
+                            <h3 class="pricing-title">Supporter Tier</h3>
                         </div>
                         <div class="pricing-body">
                             <div class="price-wrapper">
                                 <span class="currency">$</span>
-                                <span class="price">14.50</span>
+                                <span class="price">0.99</span>
                                 <span class="period">monthly</span>
                             </div>
                             <ul class="list">
-                                <li class="active">60 GB space</li>
-                                <li class="active">600 GB transfer</li>
-                                <li class="active">Pro Design Panel</li>
-                                <li>15-minute support</li>
-                                <li>Unlimited Emails</li>
-                                <li>24/7 Security</li>
+                                <li class="active">YouTube Member Badge</li>
+                                <li class="active">Discord Member Role</li>
+                                <li class="active">YouTube Live Chat - Emojis</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
-                            <a href="#" class="main-button">Purchase Now</a>
+                            <a href="https://youtube.com/inscane/join" target="_blank" class="main-button">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -234,25 +231,22 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
                     <div class="pricing-item active">
                         <div class="pricing-header">
-                            <h3 class="pricing-title">Premium</h3>
+                            <h3 class="pricing-title">Beast Tier</h3>
                         </div>
                         <div class="pricing-body">
                             <div class="price-wrapper">
                                 <span class="currency">$</span>
-                                <span class="price">21.50</span>
+                                <span class="price">4.99</span>
                                 <span class="period">monthly</span>
                             </div>
                             <ul class="list">
-                                <li class="active">120 GB space</li>
-                                <li class="active">1200 GB transfer</li>
-                                <li class="active">Pro Design Panel</li>
-                                <li class="active">15-minute support</li>
-                                <li>Unlimited Emails</li>
-                                <li>24/7 Security</li>
+                                <li class="active">YouTube Member Badge</li>
+                                <li class="active">Discord Member Role</li>
+                                <li class="active">YouTube Live Chat - Emojis</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
-                            <a href="#" class="main-button">Purchase Now</a>
+                            <a href="https://youtube.com/inscane/join" target="_blank" class="main-button">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -262,25 +256,22 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
                     <div class="pricing-item">
                         <div class="pricing-header">
-                            <h3 class="pricing-title">Advanced</h3>
+                            <h3 class="pricing-title">InScane Tier</h3>
                         </div>
                         <div class="pricing-body">
                             <div class="price-wrapper">
                                 <span class="currency">$</span>
-                                <span class="price">42.00</span>
+                                <span class="price">14.99</span>
                                 <span class="period">monthly</span>
                             </div>
                             <ul class="list">
-                                <li class="active">250 GB space</li>
-                                <li class="active">5000 GB transfer</li>
-                                <li class="active">Pro Design Panel</li>
-                                <li class="active">15-minute support</li>
-                                <li class="active">Unlimited Emails</li>
-                                <li class="active">24/7 Security</li>
+                               <li class="active">YouTube Member Badge</li>
+                                <li class="active">Discord Member Role</li>
+                                <li class="active">YouTube Live Chat - Emojis</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
-                            <a href="#" class="main-button">Purchase Now</a>
+                            <a href="https://youtube.com/inscane/join" target="_blank" class="main-button">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -397,88 +388,77 @@ https://templatemo.com/tm-535-softy-pinko
     </section>
     <!-- ***** Blog End ***** -->
 
-    <!-- ***** Contact Us Start ***** -->
-    <section class="section colored" id="contact-us">
+	<!-- ***** Social Media Start ***** -->
+    <section class="section" id="socialmedia">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Talk To Us</h2>
+                        <h2 class="section-title">Got Instagram?</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Maecenas pellentesque ante faucibus lectus vulputate sollicitudin. Cras feugiat hendrerit semper.</p>
+                        <p>Do you have Instagram? Well I do! As much as I am not really active on Instagram, I still tend to read DM's look at photos, and maybe post one there and there. Feel free to follow if you want?</p>
                     </div>
                 </div>
             </div>
             <!-- ***** Section Title End ***** -->
-
+			
+			<!-- ***** Instagram Feed Start ***** -->
+            <div class="powr-instagram-feed" id="869f120a_1620649875"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+			
+			<!-- ***** Instagram Feed End ***** -->
+			
+			<!-- ***** Twitter Feed Start ***** -->
+        <div class="container">
+            <!-- ***** Section Title Start ***** -->
             <div class="row">
-                <!-- ***** Contact Text Start ***** -->
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <h5 class="margin-bottom-30">Keep in touch</h5>
-                    <div class="contact-text">
-                        <p>110-220 Quisque diam odio, maximus ac consectetur eu, 10260
-                        <br>auctor non lorem</p>
-                        <p>You are NOT allowed to re-distribute Softy Pinko template on any template collection websites. Thank you.</p>
+                <div class="col-lg-12">
+                    <div class="center-heading">
+                        <h2 class="section-title">Got Twitter?</h2>
                     </div>
                 </div>
-                <!-- ***** Contact Text End ***** -->
-
-                <!-- ***** Contact Form Start ***** -->
-                <div class="col-lg-8 col-md-6 col-sm-12">
-                    <div class="contact-form">
-                        <form id="contact" action="" method="get">
-                          <div class="row">
-                            <div class="col-lg-6 col-md-12 col-sm-12">
-                              <fieldset>
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                              </fieldset>
-                            </div>
-                            <div class="col-lg-6 col-md-12 col-sm-12">
-                              <fieldset>
-                                <input name="email" type="email" class="form-control" id="email" placeholder="E-Mail Address" required="">
-                              </fieldset>
-                            </div>
-                            <div class="col-lg-12">
-                              <fieldset>
-                                <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
-                              </fieldset>
-                            </div>
-                            <div class="col-lg-12">
-                              <fieldset>
-                                <button type="submit" id="form-submit" class="main-button">Send Message</button>
-                              </fieldset>
-                            </div>
-                          </div>
-                        </form>
+                <div class="offset-lg-3 col-lg-6">
+                    <div class="center-text">
+                        <p>Out of all Social Media Platforms like YouTube, Instagram, and even Discord. I tend to be more active on Twitter liking/retweeting or even just scrolling through my Twitter Timeline.</p>
                     </div>
                 </div>
-                <!-- ***** Contact Form End ***** -->
             </div>
-        </div>
-    </section>
-    <!-- ***** Contact Us End ***** -->
-    
+			
+			<!-- ***** Twitter Feed Start ***** -->
+			
+			<div class="row">
+  <div class="column"></div>
+				<a class="twitter-timeline" data-width="675" data-height="750" data-theme="light" href="https://twitter.com/InScaneYT?ref_src=twsrc%5Etfw">Tweets by InScaneYT</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <div class="column"></div>
+				<iframe src="https://discord.com/widget?id=510964080501063720&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</div>
+			
+			
+			
+		    <!-- ***** Twitter Feed End ***** -->
+                  
+			
+			
+			
     <!-- ***** Footer Start ***** -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="https://facebook.com/InScaneYT" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/inscaneyt" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://youtube.com/inscane" target="_blank"><i class="fa fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; 2020 Softy Pinko Company - Design: TemplateMo</p>
+                    <p class="copyright">Copyright &copy; 2018-2020 InScane Media</p>
                 </div>
             </div>
         </div>
