--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ https://templatemo.com/tm-535-softy-pinko
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                        <p>Learn more about InScane's future projects or his online presence from the press articles below, to other well-known online sources for all upcoming Film Projects, to updated press articles.</p>
                     </div>
                 </div>
             </div>
