--- a/index.html
+++ b/index.html
@@ -162,6 +162,45 @@ https://templatemo.com/tm-535-softy-pinko
     <!-- ***** Features Big Item End ***** -->
 
 
+		  <!-- ***** YouTube Featured Friends Start ***** -->
+    <section class="section colored" id="ytfriends">
+        <div class="container">
+            <!-- ***** Section Title Start ***** -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="center-heading">
+                        <h2 class="section-title">YouTube Featured Friends</h2>
+                    </div>
+                </div>
+                <div class="offset-lg-3 col-lg-6">
+                    <div class="center-text">
+                        <p>Over the years you have been supporting InScane on an everyday baisis. Check out these other creators and maybe drop them a sub?</p>
+                    </div>
+                </div>
+            </div>
+            <!-- ***** Section Title End ***** -->
+			
+  <div class="row">
+	  
+ <div class="column"></div>
+	  
+ <div class="rounded">
+    <a href="https://www.youtube.com/dakreekcraft" target="_blank"><img src="assets/avatars/kreekcraft.png" alt="KreekCraft" style="width:175px;height:175px;"></a>
+	<center>KreekCraft</center><br>
+	<center> <a href="https://www.youtube.com/user/DaKreekCraft?sub_confirmation=1" target="_blank" class="main-button">Subscribe</a> </center>
+	 </div>
+	  
+  <div class="column"></div>
+	  
+  <div class="column"></div>
+	  
+  <div class="column"></div>
+	  
+  <div class="column"></div>
+	  
+  <div class="column"></div>
+				
+			
     <!-- ***** Pricing Plans Start ***** -->
     <section class="section colored" id="membership">
         <div class="container">
