--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
   <head>
-
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="InScane's Official Website!">
+    <meta name="author" content="InScane">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
 
