--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="InScane's Official Website!">
     <meta name="author" content="InScane">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
-	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
+	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
 
     <title>InScane - Official Website</title>
 <!--
