--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
 
-    <title>InScane - Official Website</title>
-<!--
-SOFTY PINKO
-https://templatemo.com/tm-535-softy-pinko
--->
+    <title>InScane Official Website</title>
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
