--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
     </section>
 
-		  <!-- ***** YouTube Featured Friends Start ***** -->
+		  <!-- ***** YouTube Featureds Friends Start ***** -->
     <section class="section colored" id="ytfriends">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
