--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
 
     <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
 
+	  
+	  <!-- ***** InScane Schema Start ***** -->
+	  <script type="application/ld+json">
+	  	{
+			"@context": "https://schema.org/",
+			"@type": "Person",
+			"name": "InScane",
+			"url": "https://realscane.com",
+			"image": "https://static.wikia.nocookie.net/youtube/images/d/d3/InScane.jpg",
+			"sameAs": [
+			"https://twitter.com/InScaneYT",
+			"https://instagram.com/InScaneYT",
+			"https://youtube.com/inscane",
+			"https://realscane.com",
+			"https://facebook.com/InScaneYT"
+			]  
+		}
+	  </script>
+	  
+	  <!-- ***** InScane Schema End ***** -->
+	  
     </head>
     
     <body>
@@ -53,7 +74,7 @@
                             <li><a href="#press">Press</a></li>
                             <li><a href="#socialmedia">Social Media</a></li>
                         </ul>
-                        <a class='menu-trigger'>
+                        <a class="menu-trigger">
                             <span>Menu</span>
                         </a>
                         <!-- ***** Menu End ***** -->
