--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="author" content="Michael West">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
-
+	  
+	<link rel="canonical" href="https://realscane.com" />
+	<meta name="robots" content="index, follow">
+	  
     <title>InScanes Official Website</title>
 
     <!-- Additional CSS Files -->
@@ -18,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 
     <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
+	  
+	<link rel="stylesheet" href="assets/css/customcss-inscane">
 
 	  
 	  <!-- ***** InScane Schema Start ***** -->
@@ -73,6 +78,7 @@
                             <li><a href="#membership">Memberships</a></li>
                             <li><a href="#press">Press</a></li>
                             <li><a href="#socialmedia">Social Media</a></li>
+							<li><a href="https://inscane.creator-spring.com/">Merchandise</a></li>
                         </ul>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 						<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! As the website is still in Development, expect bugs and more. -- BlackTangent Studios just surpassed 4,000+ Members and soon to surpass 300,000+ Game Plays!!</marquee>
@@ -416,13 +422,13 @@
  		 <div class="row">
 	  
  		   	 <div class="column"></div> 
-				 <iframe width="450" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRVPMrkEjiPLVN22Gu--NIw_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				 <iframe width="475" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRVPMrkEjiPLVN22Gu--NIw_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			 <div class="column"></div> 
-			 	<iframe width="450" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRXwpMQXIiD4PYOj2w4BQYIH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			 	<iframe width="475" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRXwpMQXIiD4PYOj2w4BQYIH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			 <div class="column"></div> 
-				 <iframe width="450" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRVxKurd_4ZgFzAtLCNpscC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				 <iframe width="475" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRVxKurd_4ZgFzAtLCNpscC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			 <div class="column"></div> 
-				 <iframe width="450" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRUN5-eU-sgf6RG5zSX-iJa3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				 <iframe width="475" height="250" src="https://www.youtube.com/embed/videoseries?list=PLg0XLHWgQmRUN5-eU-sgf6RG5zSX-iJa3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			 <div class="column"></div> 
 			 
 			 <div class="column"></div> 
