--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <li><a href="#membership">Memberships</a></li>
                             <li><a href="#press">Press</a></li>
                             <li><a href="#socialmedia">Social Media</a></li>
-							<li><a href="https://inscane.creator-spring.com/">Merchandise</a></li>
+							<li><a href="https://inscane.creator-spring.com/" target="_blank">Merchandise</a></li>
                         </ul>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 						<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! As the website is still in Development, expect bugs and more. -- BlackTangent Studios just surpassed 4,000+ Members and soon to surpass 300,000+ Game Plays!!</marquee>
