--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>Hello, <strong>my</strong><br>name is<strong> InScane!</strong></h1>
-                        <p>InScane is an Social Media Influencer, Actor, and Television Show Host. He love's entertaining the world and teaching the public new things and to prove that the harder you work, anything is possible.</p>
+                        <h1>Hello, <strong>my</strong><br>name is<strong> Michael!</strong></h1>
+                        <p>I am mainly knwon as InScane on Social Media as a Influencer, Actor, and Television Show Host. He love's entertaining the world and teaching the public new things and to prove that the harder you work, anything is possible.</p>
                         <a href="#aboutme" class="main-button-slider">Learn More!</a>
                     </div>
                 </div>
@@ -567,12 +567,15 @@
                         <li><a href="https://instagram.com/inscaneyt" target="_blank"><i class="fa fa-instagram">
 						</i></a></li>
                         <li><a href="https://youtube.com/inscane" target="_blank"><i class="fa fa-youtube"></i></a></li>
+						<li><a href="https://open.spotify.com/artist/5GbqwAgJ4s4wUXYBiHwkW1" target="_blank"><i class="fa fa-spotify"></i></a></li>
+						<li><a href="https://music.apple.com/us/artist/inscane/1503128787" target="_blank"><i class="fa fa-music"></i></a></li>
+						<li><a href="https://www.imdb.com/name/nm11520583/" target="_blank"><i class="fa fa-imdb"></i></a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; 2018-2020 InScane Media</p>
+                    <p class="copyright">Copyright &copy; 2018-2021 InScane Media</p>
                 </div>
             </div>
         </div>
