--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta src="/favicon.png" alt="InScane Logo">
     <meta name="description" content="Official Website for Social Media Influencer and Actor InScane. Get the latest news, information, updates, and information about personal life here.">
     <meta name="author" content="Michael West">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" /> 
-	  
+	 
 	<link rel="canonical" href="https://realscane.com" />
 	<meta name="robots" content="index, follow">
 	  
