--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
                                         console.log("Missing youtube data elements, statistics will not be written.")
                                     }
                                 })
+								
+							}
+							
+							getSubscribers(); }
     	</script>
 		<!-- ***** YouTueb Stat End ***** -->
 		
