--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                             <li><a href="#socialmedia">Social Media</a></li>
 							<li><a href="https://inscane.creator-spring.com/" target="_blank">Merchandise</a></li>
                         </ul>
+						
+						 <marquee> Michael's Vlog Channel is coming alive again! Make sure to Check it out and <a href="https://www.youtube.com/channel/UC5dNZ9QvrIWK8ROWHEJv2YA" target="_blank">Subscribe Here!</a></marquee>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
-						<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee>
+				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
                         <a class="menu-trigger">
                             <span>Menu</span>
                         </a>
