--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <li><a href="#membership">Memberships</a></li>
                             <li><a href="#press">Press</a></li>
                             <li><a href="#socialmedia">Social Media</a></li>
-							<li><a href="https://inscane.creator-spring.com/" target="_blank">Merchandise</a></li>
+							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
                         </ul>
 						
 						 <marquee> We are back to uploading and streaming videos on YouTube! Subscribe and check out future content by  <a href="https://www.youtube.com/inscane" target="_blank">Clicking Here!</a></marquee>
