--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
                         </ul>
 						
-						 <marquee> We are back to uploading and streaming videos on YouTube! Subscribe and check out future content by  <a href="https://www.youtube.com/inscane" target="_blank">Clicking Here!</a></marquee>
+						 <marquee> NEW Official InScane Back To School Merchandise will officially be released July 17th, 2021! Get ready! Check out the shop by  <a href="https://shop.realscane.com" target="_blank">Clicking Here!</a></marquee>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
                         <a class="menu-trigger">
