--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
 	  
 	<link rel="stylesheet" href="assets/css/customcss-inscane">
 
+	  <!-- ***** InScane Merchandise Search Start ***** -->
+	  <script type="application/ld+json">
+	  	{
+  				"@context": "https://schema.org/",
+  				"@type": "WebSite",
+  				"name": "InScane Merchandise",
+  				"url": "https://shop.realscane.com/",
+  				"potentialAction": {
+    			"@type": "SearchAction",
+    			"target": "https://shop.realscane.com/search?searchterm={search_term_string}",
+				"query-input": "required name=search_term_string"
+  			}
+  		}
+	  </script>
+	  <!-- ***** InScane Merchandise Search End ***** -->
 	  
 	  <!-- ***** InScane Schema Start ***** -->
 	  <script type="application/ld+json">
