--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                             <li><a href="#press">Press</a></li>
                             <li><a href="#socialmedia">Social Media</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
+							<li><a href="https://realscane.com/contact.html" target="_blank">Contact Us</a></li>
                         </ul>
 						
 						 <marquee> NEW Official InScane Back To School Merchandise will officially be released July 17th, 2021! Get ready! Check out the shop by  <a href="https://shop.realscane.com" target="_blank">Clicking Here!</a></marquee>
