--- a/contact.html
+++ b/contact.html
@@ -89,18 +89,14 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#aboutme">About</a></li>
-                            <li><a href="#membership">Memberships</a></li>
-                            <li><a href="#press">Press</a></li>
-                            <li><a href="#socialmedia">Social Media</a></li>
+                            <li><a href="https://realscane.com/#welcome" target="_blank">Home</a></li>
+							<li><a href="https://realscane.com/#aboutme" target="_blank">About</a></li>
+							<li><a href="https://realscane.com/#membership" target="_blank">Memberships</a></li>
+							<li><a href="https://realscane.com/#press" target="_blank">Press</a></li>
+							<li><a href="https://realscane.com/#socialmedia" target="_blank">Social Media</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact.html" target="_blank">Contact Us</a></li>
                         </ul>
-						
-						 <marquee> NEW Official InScane Back To School Merchandise will officially be released July 17th, 2021! Get ready! Check out the shop by  <a href="https://shop.realscane.com" target="_blank">Clicking Here!</a></marquee>
-						<!-- ***** Navigation Menu Scroll Text ***** -->
-				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
                         <a class="menu-trigger">
                             <span>Menu</span>
                         </a>
