--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
 							<li><a href="https://realscane.com/#press" target="_blank">Press</a></li>
 							<li><a href="https://realscane.com/#socialmedia" target="_blank">Social Media</a></li>
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
-							<li><a href="https://realscane.com/contact.html" target="_blank">Contact Us</a></li>
+							<li><a href="https://realscane.com/contact" target="_blank">Contact Us</a></li>
                         </ul>
                         <a class="menu-trigger">
                             <span>Menu</span>
