--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="https://realscane.com/#welcome" target="_blank">Home</a></li>
+                            <li><a href="https://realscane.com/" target="_blank">Home</a></li>
 							<li><a href="https://realscane.com/#aboutme" target="_blank">About</a></li>
 							<li><a href="https://realscane.com/#membership" target="_blank">Memberships</a></li>
 							<li><a href="https://realscane.com/#press" target="_blank">Press</a></li>
