--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
+                        <a href="https://realscane.com" class="logo">
                             <img src="assets/images/logo.png" alt="InScane"/>
                         </a>
                         <!-- ***** Logo End ***** -->
@@ -97,7 +97,6 @@
 							<li><a href="https://shop.realscane.com/" target="_blank">Merchandise</a></li>
 							<li><a href="https://realscane.com/contact" >Contact Us</a></li>
                         </ul>
-						
 						 <marquee> NEW Official InScane Back To School Merchandise will officially be released July 17th, 2021! Get ready! Check out the shop by  <a href="https://shop.realscane.com" target="_blank">Clicking Here!</a></marquee>
 						<!-- ***** Navigation Menu Scroll Text ***** -->
 				<!--		<marquee direction="left" height="37" width="1107" bgcolor="transparent">Welcome to the Official InScane Website! Get the latest news, updates, information, and announcements all in one place! -- New Streaming Platform? Yes!! Come join InScane on <a href="https://trovo.live/InScane" target="_blank">Trovo</a> and join the streaming adventure on other platforms! -- Summer Merchandise Drops will be out Late June or even Early July, get ready and get hyped for the new merch drops! -- As a Huge Announcement, InScane will be officially Graduating High School on 6/11/2021 and officially moving on as a College Student attending Curry College in the fall semester in Augest. Huge Congradulations, and let the future bring more enjoyment and fun.</marquee> -->
@@ -281,7 +280,7 @@
     </section>
 
 		  <!-- ***** YouTube Featured Friends Start ***** -->
-    <section class="section colored" id="ytfriends">
+    <section class="section padding-top-70 padding-bottom-0" id="ytfriends">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
@@ -296,7 +295,7 @@
                     </div>
             </div>
             <!-- ***** Section Title End ***** -->
-<section class="section colored" id="youtubefriends">		
+<section class="section padding-top-70 padding-bottom-0" id="youtubefriends">		
   <div class="row">
 	  
  <div class="column"></div> 
@@ -326,7 +325,7 @@
   </div>
     </section>
     <!-- ***** Pricing Plans Start ***** -->
-    <section class="section colored" id="membership">
+    <section class="section padding-top-70 padding-bottom-0" id="membership">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
@@ -426,7 +425,7 @@
     <!-- ***** Counter Parallax End ***** -->   
 
 				<!-- ***** YouTube Featured Friends Start ***** -->
-    <section class="section colored" id="youtubevideocontent">
+    <section class="section padding-top-70 padding-bottom-0" id="youtubevideocontent">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
@@ -435,6 +434,8 @@
                         <h2 class="section-title">YouTube Content</h2>
                     </div>
                 </div>
+			</div>
+		</div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
                         <p>Over the years you have been supporting InScane on an everyday baisis. Check out these other creators and maybe drop them a sub?</p>
@@ -442,7 +443,7 @@
             </div>
             <!-- ***** Section Title End ***** -->
 				
-		<section class="section colored" id="youtubecontent">		
+		<section class="section padding-top-70 padding-bottom-0" id="youtubecontent">		
  		 <div class="row">
 	  
  		   	 <div class="column"></div> 
@@ -539,6 +540,8 @@
                     </div>
                 </div>
             </div>
+		 </div>
+		</section>
             <!-- ***** Section Title End ***** -->
 			
 			<!-- ***** Instagram Feed Start ***** -->
@@ -562,7 +565,9 @@
                         <p>Out of all Social Media Platforms like YouTube, Instagram, and even Discord. I tend to be more active on Twitter liking/retweeting or even just scrolling through my Twitter Timeline.</p>
                     </div>
                 </div>
-            </div>
+			</div>
+           </div>
+			
 			
 			<!-- ***** Twitter Feed Start ***** -->
 			
